[package]
name = "hive"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
itertools = "0.14.0"
json = "0.12.4"
lazy_static = "1.5.0"
minijinja = { version = "2.17.1", features = ["loader"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["query", "form"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
urlencoding = "2.1.3"
